syntax = "proto3";
package discount;

message Info {
    string user_id = 1;
    string product_id = 2;
}

message Discount {
    float percentage = 1;
    int32 value_in_cents = 2;
}

service DiscountService {
    rpc CalculateDiscount(Info) returns (Discount) {}
}